--- a/index.html
+++ b/index.html
@@ -140,43 +140,43 @@
                 alt="Наша команда"
                 width="270"
               />
-              <div>
+              <div class="team-details">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="name-description">Product Designer</p>
               </div>
             </li>
-            <li class="team-description list">
+            <li class="team-description">
               <img
                 class="team-img"
                 src="./img/team2.jpg"
                 alt="Наша команда"
                 width="270"
               />
-              <div>
+              <div class="team-details">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p class="name-description">Frontend Developer</p>
               </div>
             </li>
-            <li class="team-description list">
+            <li class="team-description">
               <img
                 class="team-img"
                 src="./img/team3.jpg"
                 alt="Наша команда"
                 width="270"
               />
-              <div>
+              <div class="team-details">
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p class="name-description">Marketing</p>
               </div>
             </li>
-            <li class="team-description list">
+            <li class="team-description">
               <img
                 class="team-img"
                 src="./img/team4.jpg"
                 alt="Наша команда"
                 width="270"
               />
-              <div>
+              <div class="team-details">
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="name-description">UI Designer</p>
               </div>
